<resources>
    <string name="app_name">VA Math Calculator</string>
    <string-array name="nav_items">
        <item>Home</item>
        <item>About</item>
        <item>Help</item>
        <item>Privacy and Data</item>
        <item>Additional Resources</item>
        <item>Terms of Use</item>
    </string-array>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="main_logo_desc">The main app logo displayed on a logo screen.</string>
    <string name="home_fragment_label">VA Math Calculator</string>
    <string name="clear_fragment_label">Clear All Data</string>
    <string name="about_fragment_label">About</string>
    <string name="about_textview_second">About</string>
    <string name="about_textView15">This application was created with the sole intention to help the veterans of the United States calculate their disability income with ease. With this app you can input your dependents as well as your marrital status, along with other helpful information, then the app will take care of the rest!</string>
    <string name="about_textView16">The creation of this app could not have been possible without the hard work and knowledge of some of the best students attending Valecia College. Sarah Gillis, Gabriel Corbin, Publio Samayoa, Chance Giordano, Heloiza Naemy Sadoyama Camargo, and Jensy Fernandez worked very diligently, day and night, to make sure that this application was created with precision and excellence to make sure that it works great so you can work less.</string>
    <string name="about_textView17">We hope you enjoy the App!</string>
    <string name="help_fragment_label">Help</string>
    <string name="help_textView5">Disability ratings are based on the severity of your disability. The VA express this rating as a percentage, representing how much your disability decreases your overall health and ability to function.\n\nThen, they use your disability rating to determine your disability compensation rate, so we can calculate how much money you’ll receive from us each month.</string>
    <string name="help_textView6">How does the VA determine combined VA disability ratings?</string>
    <string name="help_textView7">Calculating your combined disability rating involves more than adding up your individual ratings. That’s why your combined rating may be different from the sum of your individual ratings. The VA takes percentages of percentages.\n\nFor example: Let’s say you are a veteran with two 10% ratings. The first rating will be 10% of 100 (which is 10%), leaving you with a 90% “healthy“ percentage. The second 10 rating will be 10% of the 90% (healthy percentage), which is 9%. The combined rating would be 19%. It is then rounded up or down. In this case, it would be rounded to 20%.</string>
    <string name="help_textView8_text_description">For more information visit:  www.va.gov/disability/about-disability-ratings</string>
    <string name="privacy_fragment_label">Privacy and Data</string>
    <string name="privacy_fragment_collection">WHAT INFORMATION DO WE COLLECT?  Android Space does not collect any data from users through the VA Math Calculator, which means there is no collecting, storing, transferring, sharing, or selling of any user data internally or with third parties, including domestic or internationally. We do not use any tracking methods. We do not utilize any form of logins, including social logins.</string>
    <string name="privacy_fragment_contact">HOW CAN YOU CONTACT US ABOUT THIS NOTICE? If you have any questions or comments about this notice, please submit an email to inquries@androidspace.com.</string>
    <string name="terms_fragment_label">Terms of Use</string>
    <string name="terms_fragment_intro">The VA Math Calculator is licensed to you (End-user) by Android Space for use only under the terms of this license agreement. By downloading the VA Math Calculator, you indicate that you agree to be bound by all the terms of this license agreement. USE OF THIS APP DOES NOT GUARANTEE ANY APPROVAL OF CLAIMS OR MONETARY AWARD(S).</string>
    <string name="terms_fragment_terms1"><b>1. THE APPLICATION.</b>  The VA Math Calculator is an application created to provide calculations for VA disability claims and customized for Android mobile devices. The VA Math Calculator is not tailored to comply with industry-specific regulations (Health Insurance Portability and Accountability Act (HIPAA)), Federal Information Security Management Act (FISMA), etc.; therefore, if your interactions would be subject to such laws, you may not use this application. You may not use this application in a way that would violate the Gramm-Leach-Bliley Act (GLBA).</string>
    <string name="terms_fragment_terms2"><b>2. SCOPE OF LICENSE.</b>  You may not reverse engineer, translate, disassemble, integrate, decompile, remove, modify, combine, create derivative work or updates of, adapt, or attempt to derive the source code of this application, or any part there (except with Android Space’s prior written consent).</string>
    <string name="terms_fragment_terms3"><b>3. TECHNICAL REQUIREMENTS.</b>  Android Space reserves the right to modify the technical specifications as it sees appropriate at any time.</string>
    <string name="terms_fragment_terms4"><b>4. MAINTENANCE OR SUPPORT.</b>  Android Space is not obligated, expressed, or implied, to provide any maintenance, technical, or other support for the VA Math Calculator.</string>
    <string name="terms_fragment_terms5"><b>5. USER-GENERATED CONTRIBUTIONS.</b>  The VA Math Calculator does not offer users to submit or post content.</string>
    <string name="terms_fragment_terms6"><b>6. CONTRIBUTION LICENSE.</b>  Android Space does not access, store, process, or use any user information that is entered into the VA Math Calculator. If a user submits suggestions for feedback regarding the VA Math Calculator, the user agrees that Android Space may use and share any feedback for any purpose without compensation to the user.</string>
    <string name="terms_fragment_terms7"><b>7. WARRANTY.</b>  Android Space warrants that the VA Math Calculator is free of spyware, trojan horses, viruses, or any other malware at the time of your download. Android Space warrants that the VA Math Calculator works as described. No warranty is provided for the VA Math Calculator that is not executable on the device, that has been unauthorizedly modified, handled inappropriately, or culpably, combined or installed with inappropriate hardware or software, used with inappropriate accessories, regardless if by yourself or third parties, or if there are any other reasons outside of Android Space’s sphere of influence that affect the executability of the VA Math Calculator. Android Space requests that any users who discover issues notify Android Space without delay via the contact method in section 14 of this agreement.</string>
    <string name="terms_fragment_terms8"><b>8. PRODUCT CLAIMS.</b>  Android Space and the End-user acknowledge that Android Space is responsible for addressing any claims of the End-user or any third party relating to the VA Math Calculator or the End-user’s possession and/or use of the VA Math Calculator, including, but not limited to: product liability claims; (ii) any claim that the VA Math Calculator fails to confirm to any applicable legal or regulatory requirement; and (iii) claims arising under consumer protection, privacy, or similar legislation.</string>
    <string name="terms_fragment_terms9"><b>9. LEGAL COMPLIANCE.</b>  You represent and warrant that you are not located in a country that is subject to a U.S. government embargo, or that has been designated by the U.S. government as a “terrorist supporting” country; and that you are not listed on any U.S. government list of prohibited or restricted parties.</string>
    <string name="terms_fragment_terms10"><b>10. TERMINATION.</b>  The license is valid until terminated by Android Space or by you. Your rights under this license will terminate automatically and without notice from Android Space if you fail to adhere to any term(s) of this license. Upon license termination, you shall stop all use of the VA Math Calculator, and destroy all copies, full or partial, of the VA Math Calculator.</string>
    <string name="terms_fragment_terms11"><b>11. INTELLECTUAL PROPERTY RIGHTS.</b>  Android Space and the End-user acknowledge that, in the event of any third-party claim that the VA Math Calculator, or the End-user’s possession and use of the VA Math Calculator, infringes on the third party’s intellectual property rights, Android Space will be solely responsible for the investigation, defense, settlement, and discharge or any such intellectual property infringement claims.</string>
    <string name="terms_fragment_terms12"><b>12. APPLICABLE LAW.</b>  This license agreement is government by the laws of the State of Florida excluding conflicts of law rules.</string>
    <string name="terms_fragment_terms13"><b>13. MISCELLANEOUS.</b>  If any of the terms of this agreement should be or become invalid, the validity of the remaining provisions shall not be affected. Invalid terms will be replaced by valid ones formulated in a way that will achieve the primary purpose. Collateral agreements, changes, and amendments are only valid if laid down in writing. The preceding clause can only be waived in writing.</string>
    <string name="terms_fragment_terms14"><b>14. CONTACT INFORMATION.</b>  For general inquiries, complaints, questions, or feedback concerning the VA Math Calculator, please submit an email to inquries@androidspace.com.</string>
    <string name="references_fragment_label">External Resources</string>
    <string name="fileClaim_title">Help with Disability Claims</string>
    <string name="fileClaim_howTo_text_description">How to File a VA Disability Claim</string>
    <string name="fileClaim_fileOnline_text_description">How to File for Disability Online with VA Form 21-526EZ</string>
    <string name="fileClaim_helpPhone">For Help Filing a Disability Claim Phone Number: (800) 827-1000, or TTY 711 for hearing impaired</string>
    <string name="fileClaim_claimStatus_text_description">Track the Status of a Disability Claim or Appeal</string>
    <string name="additionalResources_title">Additional Resources for Veterans</string>
    <string name="additionalResources_VA_text_description">U.S. Department of Veterans Affairs</string>
    <string name="additionalResources_vaPhone">U.S. Department of Veterans Affairs Phone Number: (800) 698-2411, or TTY 711 for hearing impaired</string>
    <string name="additionalResources_stateVA_text_description">State Departments of Veterans Affairs</string>
    <string name="additionalResources_DAV_text_description">DAV – Disabled American Veterans Nonprofit Charity</string>
    <string name="additionalResources_lifeline_text_description">Lifeline for Vets National Veterans Foundation</string>
    <string name="additionalResources_suicideHotline">Suicide Prevention Hotline: 988</string>
    <string name="additionalResources_suicideLifeline_text_description">Suicide and Crisis Lifeline for Veterans</string>
</resources>