<?xml version="1.0" encoding="utf-8"?>
<!--
 * by sgillis5 2022
 * https://github.com/sgillis5
 *
 * Contributors:
 * c0deblack: https://github.com/c0deblack
-->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Resources"
    >
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".FragmentResources"
        android:orientation="vertical">

        <TextView
            android:id="@+id/message"
            style="@style/VAMathCalculator.BodyHeader"
            android:text="@string/fileClaim_title"
            />

        <TextView
            android:id="@+id/message2"
            style="@style/VAMathCalculator.BodyText"
            android:textColorLink="@color/blue_100"
            android:text="@string/fileClaim_howTo_text_description"
            />

        <TextView
            android:id="@+id/message3"
            style="@style/VAMathCalculator.BodyText"
            android:textColorLink="@color/blue_100"
            android:text="@string/fileClaim_fileOnline_text_description"
            />

        <TextView
            android:id="@+id/message4"
            style="@style/VAMathCalculator.BodyText"
            android:textColorLink="@color/blue_100"
            android:text="@string/fileClaim_claimStatus_text_description"
            />

        <TextView
            android:id="@+id/message5"
            style="@style/VAMathCalculator.BodyText"
            android:text="@string/fileClaim_helpPhone"
            />

        <TextView
            android:id="@+id/message6"
            style="@style/VAMathCalculator.BodyHeader"
            android:text="@string/additionalResources_title"
            />

        <TextView
            android:id="@+id/message7"
            style="@style/VAMathCalculator.BodyText"
            android:textColorLink="@color/blue_100"
            android:text="@string/additionalResources_VA_text_description"
            />

        <TextView
            android:id="@+id/message8"
            style="@style/VAMathCalculator.BodyText"
            android:text="@string/additionalResources_vaPhone"
            />

        <TextView
            android:id="@+id/message9"
            style="@style/VAMathCalculator.BodyText"
            android:textColorLink="@color/blue_100"
            android:text="@string/additionalResources_stateVA_text_description"
            />

        <TextView
            android:id="@+id/message10"
            style="@style/VAMathCalculator.BodyText"
            android:textColorLink="@color/blue_100"
            android:text="@string/additionalResources_DAV_text_description"
            />

        <TextView
            android:id="@+id/message11"
            style="@style/VAMathCalculator.BodyText"
            android:textColorLink="@color/blue_100"
            android:text="@string/additionalResources_lifeline_text_description"
            />

        <TextView
            android:id="@+id/message12"
            style="@style/VAMathCalculator.BodyText"
            android:textColorLink="@color/blue_100"
            android:text="@string/additionalResources_suicideLifeline_text_description"
            />

        <TextView
            android:id="@+id/message13"
            style="@style/VAMathCalculator.BodyText"
            android:text="@string/additionalResources_suicideHotline"
            />

    </LinearLayout>
</ScrollView>