<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".FragmentHelp">

        <TextView
            android:id="@+id/textView1"
            style="@style/VAMathCalculator.BodyHeader"
            android:text="What’s a disability rating?"
            />

        <TextView
            android:id="@+id/textView5"
            style="@style/VAMathCalculator.BodyText"
            android:text="@string/help_textView5" />

        <TextView
            android:id="@+id/textView6"
            style="@style/VAMathCalculator.BodyHeader"
            android:text="@string/help_textView6"
            />

        <TextView
            android:id="@+id/textView7"
            style="@style/VAMathCalculator.BodyText"
            android:text="@string/help_textView7" />

        <TextView
            android:id="@+id/textView8"
            style="@style/VAMathCalculator.BodyText"
            android:textColorLink="@color/blue_100"
            android:text="@string/help_textView8_text_description" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>