<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/frameLayout2"
        tools:context=".FragmentPrivacy"
        android:orientation="vertical">

        <TextView
            android:id="@+id/privacydata"
            style="@style/VAMathCalculator.BodyHeader"
            android:text="@string/privacy_fragment_label"
            />

        <TextView
            android:id="@+id/collection"
            style="@style/VAMathCalculator.BodyText"
            android:text="@string/privacy_fragment_collection"
            />

        <TextView
            android:id="@+id/contact"
            style="@style/VAMathCalculator.BodyText"
            android:text="@string/privacy_fragment_contact"
            />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>